# aoc2022

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  tasks.py
.github/workflows/: test_code.yml
aoc2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  fastapi_sample.py  function_sample.py  utils.py
docs/: conf.py  index.rst
notebooks/: test.ipynb  test1.ipynb
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_function_sample.py
